[package]
name = "x509"
description = "X.509 certificate serialization"
version = "0.0.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
repository = "https://github.com/str4d/x509.rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
chrono = "0.4"
cookie-factory = "0.3"

[badges]
maintenance = { status = "experimental" }
